# ChangeLog for net-im/mcabber
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/mcabber/ChangeLog,v 1.16 2007/06/21 06:10:52 wschlich Exp $

*mcabber-0.9.3 (20 Jun 2007)

  20 Jun 2007; Wolfram Schlich <wschlich@gentoo.org> +mcabber-0.9.3.ebuild:
  version bump

*mcabber-0.9.2 (12 Jun 2007)

  12 Jun 2007; Wolfram Schlich <wschlich@gentoo.org> +mcabber-0.9.2.ebuild:
  version bump

  06 May 2007; Marius Mauch <genone@gentoo.org> mcabber-0.7.4.ebuild,
  mcabber-0.7.6.ebuild, mcabber-0.7.8.ebuild, mcabber-0.8.2.ebuild,
  mcabber-0.9.0.ebuild, mcabber-0.9.1.ebuild:
  Replacing einfo with elog

*mcabber-0.9.1 (26 Feb 2007)

  26 Feb 2007; Wolfram Schlich <wschlich@gentoo.org> +mcabber-0.9.1.ebuild:
  version bump

  22 Jan 2007; Markus Rothe <corsair@gentoo.org> mcabber-0.9.0.ebuild:
  Added ~ppc64

  10 Jan 2007; Gustavo Zacarias <gustavoz@gentoo.org> mcabber-0.8.2.ebuild:
  Stable on sparc wrt #127670

  04 Jan 2007; Michael Cummings <mcummings@gentoo.org> mcabber-0.8.2.ebuild:
  Bug 127670, marking amd64 stable

  03 Jan 2007; nixnut <nixnut@gentoo.org> mcabber-0.8.2.ebuild:
  Stable on ppc wrt bug 127670

  02 Jan 2007; Andrej Kacian <ticho@gentoo.org> mcabber-0.8.2.ebuild:
  Stable on x86, bug #127670.

*mcabber-0.9.0 (20 Dec 2006)

  20 Dec 2006; Wolfram Schlich <wschlich@gentoo.org> metadata.xml,
  +mcabber-0.9.0.ebuild:
  version bump

  25 Sep 2006; Przemysław Maciąg <troll@gentoo.org> mcabber-0.7.*:
  Dependency correction for previous versions ebuilds

*mcabber-0.8.2 (25 Sep 2006)

  25 Sep 2006; Przemysław Maciąg <troll@gentoo.org> +mcabber-0.8.2.ebuild:
  Version bump. Closing bug #144261. Ebuild updated and improved.
  Dependency correction. Closing bug #145201. Thx to Philip White
  <pmw+gentoo@qnan.org>.
  New maintainer in metadata

  11 Aug 2006; Jason Wever <weeve@gentoo.org> mcabber-0.7.8.ebuild:
  Added ~sparc keyword as it mysteriously went missing in this version.
