@@ -34,14 +34,14 @@ EBUILD mcabber-0.9.2.ebuild 2640 RMD160 afd5636845e49ecce4bc404c1dca650761b6105a
 MD5 3586c44b3aca4d54168c035442eb00b3 mcabber-0.9.2.ebuild 2640
 RMD160 afd5636845e49ecce4bc404c1dca650761b6105a mcabber-0.9.2.ebuild 2640
 SHA256 701ed3a7bcaf39380ece1449104225ccdf6f20fd21729d658609eadabc5abb1d mcabber-0.9.2.ebuild 2640
-EBUILD mcabber-0.9.3.ebuild 2640 RMD160 8bc30839debb4f96288bc8ceb6d873a594ffee1d SHA1 3a3760334302db2ea59473a8ba137bb1fe0be240 SHA256 b9150c760f10231f34c829db3f030790fb3b54298dee463ecd95a5e05411bc98
-MD5 4e3de721584c94270eec5b3014ec4002 mcabber-0.9.3.ebuild 2640
-RMD160 8bc30839debb4f96288bc8ceb6d873a594ffee1d mcabber-0.9.3.ebuild 2640
-SHA256 b9150c760f10231f34c829db3f030790fb3b54298dee463ecd95a5e05411bc98 mcabber-0.9.3.ebuild 2640
-MISC ChangeLog 2430 RMD160 23c7d989e080659146a4a7acc70dec5addf93d00 SHA1 190b2c568bb3e8832a9f0d225a142c55f4537469 SHA256 38d3e67e29e6cab8cc8366d72fec43219411aee08f8468ef7f6484026844cc06
-MD5 d99717da04aa25c0d62b76fdc6452e24 ChangeLog 2430
-RMD160 23c7d989e080659146a4a7acc70dec5addf93d00 ChangeLog 2430
-SHA256 38d3e67e29e6cab8cc8366d72fec43219411aee08f8468ef7f6484026844cc06 ChangeLog 2430
+EBUILD mcabber-0.9.3.ebuild 2705 RMD160 cb6eff55a8a126f466ff8ff8e671927dd898b14d SHA1 dc9f1639c39f405130ebf29397b658ace9d01288 SHA256 4d9444f17c6ffb9508c6bd7a1a6e66578ebee20525e5ad5becaa14a9c7314151
+MD5 2de04bc67af788193959e8be62fbb469 mcabber-0.9.3.ebuild 2705
+RMD160 cb6eff55a8a126f466ff8ff8e671927dd898b14d mcabber-0.9.3.ebuild 2705
+SHA256 4d9444f17c6ffb9508c6bd7a1a6e66578ebee20525e5ad5becaa14a9c7314151 mcabber-0.9.3.ebuild 2705
+MISC ChangeLog 2545 RMD160 5b39a58402212b737c41405b58e55b1f0984d884 SHA1 408adddb1183726fbcd3005648e6fd345ba130bd SHA256 f3c6625331b1360fe463f16fc26a07ad10883625a861b4b0f5f3d549bf1fd5cb
+MD5 bf5513c1950d21c67927e90145ca5636 ChangeLog 2545
+RMD160 5b39a58402212b737c41405b58e55b1f0984d884 ChangeLog 2545
+SHA256 f3c6625331b1360fe463f16fc26a07ad10883625a861b4b0f5f3d549bf1fd5cb ChangeLog 2545
 MISC metadata.xml 637 RMD160 95c3682bfd2011aa0153bd94bc95861ed8bc5709 SHA1 aa53f4c4a0f9331fc5bb2c71499db1a0c9ba2e63 SHA256 523238b5dcbb7e8f9cfdb0aeb37934a6f7cde3933ed4bc71bf22451613b3bf94
 MD5 935a70f38427f06671ef7d865454b1db metadata.xml 637
 RMD160 95c3682bfd2011aa0153bd94bc95861ed8bc5709 metadata.xml 637
